# njit-r-kaggle1

./: .gitignore  Project-summary-report.Rmd  Project-summary-report.html  Project-summary-report.nb.html  README.md  pyproject.toml
docker/: Dockerfile  build-docker.sh  run-docker.sh
report/: m5-v2.Rmd  m5-v2.nb.html
scicoria-wip/: .gitignore  docker-setup.md  helpers.R  kaggle1.R  kaggle2.R  kaggle3.R  m5-v2.Rmd  submit.cmd  submit.ps1  submit.sh
