[tool.poetry]
name = "njit-r-kaggle1"
version = "0.1.0"
description = ""
authors = ["Shawn Cicoria <github@cicoria.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jupyterlab = "^2.1.0"
numpy = "^1.18.2"
scikit-learn = "^0.22.2"
pandas = "^1.0.3"
scipy = "^1.4.1"
matplotlib = "^3.2.1"
pylint = "^2.4.4"
seaborn = "^0.10.0"
requests = "^2.23.0"
flake8 = "^3.7.9"
autopep8 = "^1.5.1"
kaggle = "^1.5.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
